
Moqui Framework Release Notes

===========================================================================
Release 1.0-beta2 - Date not yet decided
===========================================================================

The 1.0-beta2 release ... TODO

This release includes:

- All the great features of releases 1.0-preview1 to 1.0-beta1
- L10nFacade: moved number and date/time parsing and formatting methods
  from UserFacade to L10nFacade
- TransactionFacade: changed suspend() and resume() methods to better use
  internal stack of suspended transactions for consistency and a simpler
  API; also added stack of Exception to track where transactions are
  suspended for easier finding of lock wait timeout types of errors
- Moved MoquiDefaultConf.xml from framework/api to framework/impl since it
  contains a lot of implementation-specific configuration
- Updated Atomikos TransactionsEssentials to 3.7.0 and ehcache to 2.4.1
- Support <component>/lib and runtime/lib jar loading in a cached and
  extended/extensible ClassLoader
- Screen transition now supports restriction by HTTP request method
- Trim stack traces to not include Groovy proxy/etc calls (Sam's idea);
  implemented for now in BaseException, will use in other areas over time
- Changed Example entities and seed data to follow pattern to be used in
  Moqui and Mantle where the relationship.title is the enumTypeId or the
  statusTypeId
- XML Screens
  - Template for xsl-fo render mode
  - Added support for drop-down.entity-options in Screen Form
  - Auto create drop-downs for fields with a relationship to Enumeration
    using relationship.title as the enumTypeId, check to see if is valid
    enumTypeId before creating drop-down
  - Auto create drop-downs for fields with a type one relationship, with
    limit of 200 to avoid crazy drop-downs
- Resource Facade
  - Method for FOP transform to PDF, etc
- Entity Facade
  - More intelligent group by fields, ie add all fields in view-entity and