@@ -82,6 +82,9 @@
     <category name="org.apache.log4j">
         <priority value="warn"/>
     </category>
+    <category name="org.apache.fop.fo.extensions.svg.SVGElementMapping">
+        <priority value="fatal"/>
+    </category>
 
     <category name="freemarker">
         <priority value="warn"/>
