@@ -26,7 +26,7 @@ This Work includes contributions authored by David E. Jones, not as a
     </transition>
 
     <actions>
-        <set field="exampleFeatureId" from="ec.web.parameters.exampleFeatureId"/>
+        <set field="exampleFeatureId" from="exampleFeatureId"/>
         <entity-find-one entity-name="ExampleFeature" value-field="fieldValues"/>
 
         <entity-find entity-name="Enumeration" list="featureSourceEnumList">
