@@ -10,6 +10,9 @@ The 1.0-beta2 release ... TODO
 This release includes:
 
 - All the great features of releases 1.0-preview1 to 1.0-beta1
+- Changed so that web.requestParameters Map is automatically added to the
+  context when it is initialized for the web (helps reduce dependency in
+  code on web-specific stuff, ie ec.web.requestParameter references)
 - L10nFacade: moved number and date/time parsing and formatting methods
   from UserFacade to L10nFacade
 - TransactionFacade: changed suspend() and resume() methods to better use
